[Sema] Adjustments on implementation and diagnostic message for SR-14720