test/Constraints/function_conversion.swift
@@ -59,7 +59,8 @@ takesAny(consumeEscaping)
 
 var noEscapeParam: ((Int) -> Int) -> () = consumeNoEscape // expected-note {{add explicit @escaping to function parameter}}{{21-21=@escaping }}
 var escapingParam: (@escaping (Int) -> Int) -> () = consumeEscaping
-noEscapeParam = escapingParam // expected-error {{converting escaping to non-escaping functions of type '(Int) -> Int' in parameter position #0 of function type var 'noEscapeParam' is not allowed}}
+noEscapeParam = escapingParam // expected-error {{cannot assign value of type '(@escaping (Int) -> Int) -> ()' to type '((Int) -> Int) -> ()'}}
+// expected-note@-1{{parameter #0 expects escaping value of type '(Int) -> Int'}}
 
 escapingParam = takesAny
 noEscapeParam = takesAny // expected-error {{converting non-escaping value to 'Any' may allow it to escape}}
